tests/baselines/reference/asyncGetter7.errors.txt
tests/cases/conformance/async/downlevel/asyncGetter/asyncGetter7.ts(7,3): error TS1042: 'async' modifier cannot be used here.


==== tests/cases/conformance/async/downlevel/asyncGetter/asyncGetter7.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    class C {
      async get foo(): Promise<void> {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
        return;
      }
    }